@@ -1,3 +1,8 @@
+2011-12-27  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.base/dmsym.c, gdb.base/dmsym_main.c, gdb.base/dmsym.exp:
+	New files.
+
 2012-01-02  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gdb.cell/fork.exp: Delete breakpoints after reaching main.
